k8s/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: kafka-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$1
# spec:
#   rules:
#     - http:
#         paths:
#           - path: /(.*)
#             pathType: Prefix
#             backend:
#               service:
#                 name: back
#                 port:
#                   number: 80
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "mern-k8s.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: back
                port:
                  number: 80
  ingressClassName: nginx
